# rag-learning-journey

./: .gitignore  README.md
krish-naik/course-1/: readme.md
krish-naik/course-1/projects/rag-1/: pyproject.toml  requirements.txt
krish-naik/course-1/projects/rag-1/1-data-ingestion-and-parsing/: 1-data-ingestion.ipynb
krish-naik/course-2/: main.py  pyproject.toml  readme.md
krish-naik/course-2/notebook/: 1-document.ipynb  2-pdf_loader.ipynb
krish-naik/course-2/ref-resources/: rag-intro.ipynb
